--- a/app/src/main/res/layout/new_item.xml
+++ b/app/src/main/res/layout/new_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/nombreText"
         android:hint="@string/editNameHint"
+        android:maxLength="45"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp" />
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/apellidoText"
         android:hint="@string/editLastNameHint"
+        android:maxLength="45"
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp" />
